<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.arcusys.learn</groupId>
    <artifactId>learn</artifactId>
    <version>1.5-SNAPSHOT</version>
    <name>Learn</name>
    <url>http://maven.apache.org</url>

    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scala.version>2.9.1</scala.version>
        <liferay.version>6.1.1</liferay.version>
    </properties>
    <distributionManagement>
        <site>
            <id>dev-1.arcusys.fi</id>
            <url>davs://dev-1.arcusys.fi/projects/build-support/learn</url>
        </site>
        <repository>
            <id>releases</id>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-oss-releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-oss-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <scm>
        <connection>scm:git:https://dev-1.arcusys.fi/fisheye/git/learngit.git</connection>
        <developerConnection>scm:git:https://dev-1.arcusys.fi/fisheye/git/learngit.git</developerConnection>
    </scm>

    <modules>
        <module>learn-scorm-package-model</module>
        <module>learn-scorm-package-parser</module>
        <module>learn-scorm-package-serializer</module>
        <module>learn-quiz-model</module>
        <module>learn-scorm-tracking-model</module>
        <module>learn-quiz-package-generator</module>
        <module>learn-util</module>
        <module>learn-persistence-api</module>
        <module>learn-persistence-api-test</module>
        <module>learn-persistence</module>
        <module>learn-persistence-liferay</module>
        <module>learn-scorm-package-deployer</module>
        <module>learn-lms-core</module>
        <module>learn-web</module>
        <module>learn-puppet</module>
        <module>learn-demo-hook</module>
        <module>learn-servicebuilder</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.10</version>
            </dependency>
            <dependency>
                <groupId>org.scala-tools.subcut</groupId>
                <artifactId>subcut_${scala.version}</artifactId>
                <version>1.0</version>
            </dependency>
            <dependency>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest_${scala.version}</artifactId>
                <version>1.7.2</version>
            </dependency>
            <dependency>
                <groupId>org.scalamock</groupId>
                <artifactId>scalamock-scalatest-support_${scala.version}</artifactId>
                <version>2.3</version>
            </dependency>
            <dependency>
                <groupId>org.specs2</groupId>
                <artifactId>specs2_${scala.version}</artifactId>
                <version>1.12.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>maven2-repository.dev.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>http://download.java.net/maven/2/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>scala-tools.org</id>
            <name>Scala-Tools Maven2 Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>arcusys-public-repositories</id>
            <url>https://dev-1.arcusys.fi/mvn/content/groups/public</url>
        </repository>
    </repositories>
    <build>
        <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
        <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.scala-tools</groupId>
                    <artifactId>maven-scala-plugin</artifactId>
                    <version>2.15.2</version>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <phase>compile</phase>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                            <phase>test-compile</phase>
                        </execution>
                        <execution>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <scalaVersion>${scala.version}</scalaVersion>
                        <args>
                            <arg>-target:jvm-1.5</arg>
                        </args>
                        <jvmArgs>
                            <jvmArg>-Xmx1024m</jvmArg>
                            <jvmArg>-Xmx1024m</jvmArg>
                        </jvmArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.5.7.201204190339</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <includes>
                            <include>**/*Spec.java</include>
                            <include>**/*Test.java</include>
                        </includes>
                        <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>default</id>
                        <goals>
                            <goal>perform</goal>
                        </goals>
                        <configuration>
                            <pomFileName>https://dev-1.arcusys.fi/fisheye/git/learngit.git/pom.xml</pomFileName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>